
PLIB Change Log.
================

PLIB v1.2.0 (Feb xx 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Added a unique ID field to every node in the scene graph.
    This helps out some picking algorithms in PPE.

  * Added some more ifdefs to make PLIB Audio/JS components
    to make them work under NetBSD. (They already work with
    FreeBSD and OpenBSD).  Many thanks to Rene Hexel!

  * Fixed a ref() problem with ssgVtxTable::clone - thanks
    to Will Weisser for catching that one!

  * Added checks to ensure that a valid OpenGL rendering
    context exists before ssgInit/puiInit/fnt-loaders are
    called.

  * Added Dave McClurg's ASE loader and matching writer.
    If you use the new 'ssgLoad()/ssgSave()' functions,
    it'll "just work" - if you prefer you can call
    ssgLoadASE/ssgSaveASE analogously to all the other
    loaders.

  * Several fixes to the quaternion code in SG were
    contributed by "Negative0" <negative0@earthlink.net>
    (Who was that masked man?)

PLIB v1.1.11 (Feb 9th 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Fixed a tiny problem with double-sided polygons.

PLIB v1.1.10 (Feb 9th 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Added ssgLoad and ssgSave that look at the
    filename extension and call the appropriate
    lower level load/save routine.

  * Added a 'clone' function for all SSG classes.

  * PLIB now managed under CVS at SourceForge.

      http://sourceforge.net/project/?group_id=382

  * Added a collection of line/plane, plane/plane
    and line/line intersection routines to SG.
    Thanks to Norman Vine for most of them.

  * Fixed a bug in SSG file loader that would
    prevent recognition of obsolete SSG file
    types.

PLIB v1.1.9  (Jan 28th 2000)
~~~~~~~~~~~~~~~~~~~~~~~~~~~~
  * Fixed bug that caused the ref counts of the
    various vertex arrays in an ssgVtxTable to
    be incorrectly set to zero when that VtxTable
    is loaded from an '.ssg' format file.
    This tended to crash SSG with an assertion